@@ -1,13 +1,13 @@
 <?xml version="1.0"?>
-<!--Generated with glade3 3.4.5 on Sat Aug  2 20:20:52 2008 -->
+<!--Generated with glade3 3.4.5 on Sun Aug 10 22:47:18 2008 -->
 <interface>
   <object class="GtkAdjustment" id="adjustment1">
-    <property name="upper">10</property>
+    <property name="upper">5</property>
     <property name="lower">1</property>
     <property name="page_increment">1</property>
     <property name="step_increment">0.5</property>
     <property name="page_size">10</property>
-    <property name="value">2</property>
+    <property name="value">-5</property>
   </object>
   <object class="GtkAdjustment" id="adjustment2">
     <property name="upper">10</property>
@@ -15,7 +15,7 @@
     <property name="page_increment">1</property>
     <property name="step_increment">0.5</property>
     <property name="page_size">10</property>
-    <property name="value">2</property>
+    <property name="value">0</property>
   </object>
   <object class="GtkAdjustment" id="adjustment3">
     <property name="upper">65536</property>
@@ -617,6 +617,7 @@ Artwork for old versions (&lt; 0.2.7):
                     <property name="can_focus">True</property>
                     <property name="label" translatable="yes">_Autoscale Fullscreen</property>
                     <property name="use_underline">True</property>
+                    <property name="active">True</property>
                     <property name="draw_indicator">True</property>
                   </object>
                   <packing>
