@@ -1,4 +1,6 @@
 ---version 2.0.2 released---
+10-aug-2008 - punkrockguy318 - SDL: cleaned up the SConsruct
+10-aug-2008 - punkrockguy318 - SDL: fixed issue where fceu would lock up when file dialogs were opened during fullscreen
 10-aug-2008 - punkrockguy318 - SDL: fixed bug where fceux would close when file dialogs were closed
 10-aug-2008 - punkrockguy318 - SDL: File open dialog is now used to movie playback
 10-aug-2008 - punkrockguy318 - SDL: File open wrapper now takes a titlebar argument
